<resources>
    <string name="app_name">Kappa Pride SMS</string>
    <string name="channel_name">KPSMS</string>
    <string name="channel_description">Notifications from Kappa Pride SMS</string>
    <string name="send_button">Send</string>
    <string name="message_hint">Enter your message here</string>
    <string name="message_delete">Delete Message</string>
    <string name="message_forward">Forward Message</string>
    <string name="message_contact">Contact</string>
    <string name="message_delete_contact">Delete Contact</string>
    <string name="message_blacklist">Blacklist Number</string>
    <string name="blacklist">Blacklist</string>
    <string name="contacts">Contacts</string>
    <string name="search_bar">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="list_is_empty">List is empty</string>
    <string name="conversation_add">Start Conversation</string>
    <string name="message_contact_search">Search Contact</string>
</resources>
