<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_bar"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/message_contact"
        android:title="@string/message_contact" />
    <item
        android:id="@+id/message_delete_contact"
        android:title="@string/message_delete_contact"/>
    <item
        android:id="@+id/message_blacklist"
        android:title="@string/message_blacklist" />
    <item
        android:id="@+id/message_delete"
        android:enabled="true"
        android:title="@string/message_delete"
        android:visible="true" />
    <item
        android:id="@+id/message_forward"
        android:title="@string/message_forward" />
</menu>